@@ -3,12 +3,14 @@
 == Changes
   * Remove unnecessary dependency on database_cleaner-mongo from database_cleaner-mongoid: @botandrose
   * Enable the :cache_tables option for the mongo truncation strategy, and default to true: https://github.com/DatabaseCleaner/database_cleaner/pull/646"
+  * Add new :db orm configuration key, for consistency with #db and #db=. https://github.com/DatabaseCleaner/database_cleaner/pull/649
 
 == Deprecations
   * Deprecate all #orm= setter methods: https://github.com/DatabaseCleaner/database_cleaner/pull/643
   * Deprecate non-functional :reset_ids option in ActiveRecord truncation strategy: https://github.com/DatabaseCleaner/database_cleaner/issues/559
   * Deprecate mongo truncation's `:cache_tables => true` option in favor of `false`, to prep for caching removal in v2.0: https://github.com/DatabaseCleaner/database_cleaner/pull/646"
   * Deprecate redis truncation's #url method in favor of #db: @botandrose
+  * Deprecate :connection and :model configuration options in favor of :db for consistency: https://github.com/DatabaseCleaner/database_cleaner/pull/650
 
 == Bugfixes
 
